--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="script.js"></script>
 </head>
 <body>
-    oke
+    <h2>Bùi Bá Quảng</h2>
+    <hr/>
+    <p>MSSV: 2011065302</p>
 </body>
 </html>
